# austria-labor-resilience

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analysis/: eda.ipynb
api/: main.py
dagster_pipeline/: assets.py  definitions.py
dashboard/: austria_labour_resilience.pbix
data/samples/: sample_age.csv  sample_employment.csv  sample_sector.csv
dbt_labour/: dbt_project.yml
dbt_labour/models/marts/: recovery_scores.sql  schema.yml  transformed_labour.sql
dbt_labour/models/staging/: sources.yml  stg_age_demographics.sql  stg_sector_employment.sql  stg_total_employment.sql
docs/: statcube_download_guide.md
ingestion/: ingest_labour.py  ingest_labour_ci.py
models/: forecast_employment.py
tests/: test_data_quality.py  test_transformations.py
transformation/: transform_labour.py
