[project]
name = "austria-labor-resilience"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.12.22",
    "dagster-webserver>=1.12.22",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "prophet>=1.3.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.49",
]
