[project]
name = "austria-labor-resilience"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.12.22",
    "dagster-webserver>=1.12.22",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "prophet>=1.3.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
]

[tool.dagster]
module_name = "dagster_pipeline.definitions"